[package]
name = "mediaserver-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.89"
log = "0.4.22"
webrtc = "0.11.0"
#webrtc = { path = "../webrtc/webrtc" }  # 실제 패키지의 경로로 지정
env_logger = "0.11.5"
futures = "0.3.31"
tokio = "1.40.0"
config = "0.14.0"
num_cpus = "1.16.0"
sysinfo = "0.32.0"
rand = "0.8.5"
uuid = "1.10.0"
byteorder = "1.5.0"
bytes = "1.7.2"
hex = "0.4.3"
bytesio = "0.3.4"
h264-decoder = "0.2.4"
#ffmpeg-next = "7.1.0"
ffmpeg-next = { path = "../rust-ffmpeg" }
